Refactorización de los controladores: construyendo los objetos con @Builder